src/test/deca/context/invalid/langage_essentiel/premiere_passe/regle_1_3_2.deca
class A extends int {
}
// raison : condition
// message : « identificateur de classe attendu »
